# aether

./: .gitignore  CMakeLists.txt  README.md
include/: event_queue.h  orderbook.h  rest_client.h  ring_mmap.h  utils.h  ws_client.h
src/: event_queue.cpp  main.cpp  orderbook.cpp  rest_client.cpp  ring_mmap.cpp  ws_client.cpp
